update: Fixed CSS overflow

--- a/accessibility.style.css
+++ b/accessibility.style.css
@@ -143,8 +143,8 @@ body.accessibilityOpen #accessibilityWidget {
   padding: 55px 0 20px;
   border: none;
   background-color: #f5f5f5;
-  line-height: 25px !important;
-  font-size: 15px !important;
+  line-height: 20px !important;
+  font-size: 14px !important;
 
   -webkit-transition: ease-in-out 0.2s;
   -moz-transition: ease-in-out 0.2s;
@@ -305,6 +305,7 @@ body.accessibilityBigCursor *:active {
   max-width: 38px;
   box-sizing: border-box;
   padding: 2px;
+  overflow: hidden !important;
 
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
@@ -315,6 +316,7 @@ body.accessibilityBigCursor *:active {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -o-border-radius: 10px;
+  -ms-border-radius: 10px;
   border-radius: 10px;
 }
 .accessibilityTriggerButton img,
